refactor: job title adjustment

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                             <tr style="font-size: 12px; letter-spacing: 0.5px;  color: #261447;">
                                                 <td class="role" style="padding:0px;">
                                                    <p style="font-family: 'Roboto';  font-style: normal;   font-weight: 300; font-size: 15px; line-height: 9px;"> 
-                                                    Developer backEnd</p>
+                                                    Developer backend</p>
                                                    <td class="role" style="padding:0;">
                                         
                                                     <a href="https://www.linkedin.com/company/opencircle-dev/" target="_blank"><img src="./imagem/linkedin.svg" style="width: 14px; display: block; float: right; margin-right: 10px;"></a>
