refactor: adjustment image path adjustments

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                           >
                             <img
-                              src="./imagem/logo.svg"
+                              src="/imagem/logo.svg"
                               role="presentation"
                               height="100"
                               class="sc-cHGsZl bHiaRe"
@@ -123,7 +123,7 @@
                     >
                     <span>Desenvolvedor Júnior</span>
                     
-                    <a href="https://www.instagram.com/opencircledev/" target="_blank"><img src="./imagem/instagram.svg" 
+                    <a href="https://www.instagram.com/opencircledev/" target="_blank"><img src="/imagem/instagram.svg" 
                         style="
                            width: 15px;
                            height: 40px;
@@ -133,7 +133,7 @@
                            float: right;
                            margin-right: 10px;"
                         ></a>
-                    <a href="https://www.linkedin.com/company/opencircle-dev/" target="_blank"><img src="./imagem/linkedin.svg" 
+                    <a href="https://www.linkedin.com/company/opencircle-dev/" target="_blank"><img src="/imagem/linkedin.svg" 
                         style="
                            width: 15px;
                            height: 40px;
@@ -215,7 +215,7 @@
                                         display: block;
                                       "
                                       ><img
-                                        src="./imagem/phone.svg"
+                                        src="/imagem/phone.svg"
                                         width="13"       
                                         class="sc-iRbamj blSEcj"
                                         style="
@@ -268,7 +268,7 @@
                                         display: block;
                                       "
                                       ><img
-                                        src="./imagem/web.svg"
+                                        src="/imagem/web.svg"
                                         width="13"
                                         class="sc-iRbamj blSEcj"
                                         style="
@@ -323,7 +323,7 @@
                        
                                       "
                                       ><img
-                                        src="./imagem/local.svg"
+                                        src="/imagem/local.svg"
                                         width="10"
                                         class="sc-iRbamj blSEcj"
                                         style="
