refactor: adjustment path image logo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                           >
                             <img
-                              src="/imagem/logo.svg"
+                              src="./imagem/logo.svg"
                               role="presentation"
                               height="100"
                               class="sc-cHGsZl bHiaRe"
