refactor: image logo to svg

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                           >
                             <img
-                              src="./imagem/opencircle_logo_B 1 (Traced).png"
+                              src="./imagem/logo.svg"
                               role="presentation"
                               height="100"
                               class="sc-cHGsZl bHiaRe"
