--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                       "
                     >
                     <span>Desenvolvedor Júnior</span>
-                    
+                 
                     <a href="https://www.instagram.com/opencircledev/" target="_blank"><img src="./imagem/instagram.svg" 
                         style="
                            width: 15px;
@@ -133,9 +133,9 @@
                            float: right;
                            margin-right: 10px;"
                         ></a>
-                    <a href="https://www.linkedin.com/company/opencircle-dev/" target="_blank"><img src="./imagem/linkedin.svg" 
+                    <a href="https://www.linkedin.com/company/opencircle-dev/" target="_blank"><img src="https://test-files-ingestion.s3.sa-east-1.amazonaws.com/bms-logo.svg" 
                         style="
-                           width: 15px;
+                           width: 65px;
                            height: 40px;
                            left: 370px;
                            top: 28px;
