--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
                         
                       "
                     >
-                    <span>Desenvolvedor Júnior</span>
+                    <span>Desenvolvedor Jr</span>
                  
-                    <a href="https://www.instagram.com/opencircledev/" target="_blank"><img src="./imagem/instagram.svg" 
+                    <a href="https://www.instagram.com/opencircledev/" target="_blank"><img src="https://res.cloudinary.com/openflow-open/image/upload/v1647457788/opencircle/instagram_1_uzs2hp.svg" 
                         style="
                            width: 15px;
                            height: 40px;
