refactor: adjustment font

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                       class="line"
                       style="
                         vertical-align: -webkit-baseline-middle;
-                        font-size: medium;
+                        font-size: light;
                         font-family: montserrat;
                         width: 100%;
                       "
